fix: small gap with odd number of squares

--- a/style.css
+++ b/style.css
@@ -8,13 +8,15 @@ h1 {
 .buttons {
     display: flex;
     justify-content: center;
-    gap: 16px;
+    gap: 24px;
 }
 
 .container{
     width: 500px;
     height: 500px;
-    border: solid black;
+    border: 4px solid black;
+    margin-right: -1px;
+    margin-bottom: -1px;
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
